# tipmebch

./: .gitignore  README.md  package-lock.json  package.json  utils.js
commands/: deposit.js
github_bot/: .gitignore  README.md  github.js  package-lock.json  package.json  server.js  sync.js
github_bot/postgres/: database.js
github_bot/postgres/models/: User.js
github_bot/stellar/: stellar.js
lib/: index.js
meetup_bot/: Cargo.toml
meetup_bot/src/: lib.rs  main.rs
meetup_bot/src/meetup/: mod.rs  stream.rs
meetup_bot/src/meetup/pg/: mod.rs
meetup_bot/src/meetup/stellar/: cryptocompare.rs  mod.rs  stellar_api.rs
native/: Cargo.toml  artifacts.json  index.node
native/src/: lib.rs
native/src/meetup/: mod.rs  stream.rs
native/src/meetup/stellar/: cryptocompare.rs
