[package]
name = "tipme"
version = "0.1.0"
authors = ["robertdurst <rsdurst@colby.edu>"]
license = "MIT"

[lib]
name = "tipme"

[dependencies]
reqwest = "0.8.5"
ws = "*"
serde_json = "1.0"
stellar-client = { git = "https://github.com/robertDurst/stellar-sdk.git", branch = "memo" }
postgres = "0.15"
schedule_recv = "0.1.0"

