[package]
name = "tipme"
version = "0.1.0"
authors = ["robertdurst <rsdurst@colby.edu>"]
license = "MIT"

[lib]
name = "tipme"

[dependencies]
reqwest = "0.8.5"
ws = "*"
serde_json = "1.0"
stellar-client = { git = "https://github.com/kbacha/stellar-sdk.git", branch = "master" }
schedule_recv = "0.1.0"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
rand = "0.4"
